# 3D-Engine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/: pull_request_template.md
.github/workflows/: ci.yml
build_scripts/: compile_shaders.rs  mod.rs
examples/: multiple_shapes_scene.rs  simple_scene.rs
src/: lib.rs  main.rs
src/common/: vector3.rs
src/metal_shaders/: fragment_shader.metal  shader_types.h  vertex_shader.metal
src/physics/: mod.rs  physics_world.rs  rigid_body.rs  rigid_body_system.rs  vector3.rs
src/renderer/: camera.rs  common.rs  factory.rs  material_manager.rs  mesh.rs  mesh_manager.rs  mod.rs  render_core.rs  render_queue.rs  scene_graph.rs  scene_objects.rs
src/renderer/backend/: mod.rs
src/renderer/backend/metal/: backend.rs  buffer_manager.rs  macos_window.rs  mod.rs  pipeline.rs  shader_library.rs  texture_manager.rs
src/renderer/backend/vulkan/: backend.rs
src/renderer/shape_builders/: mod.rs  shape_builder.rs  triangle_builder.rs
