[package]
name = "game_engine"
version = "0.1.0-alpha.1"
edition = "2021"
build = "build.rs"

[dependencies]
cocoa = "0.26.0"
core-graphics = "0.23.2"
core-graphics-types = "0.1.3"
glam = "0.28.0"
metal = "0.29.0"
num-traits = "0.2.19"
objc = "0.2.7"
raw-window-handle = "0.6.2"
winit = "0.29.15"

[build-dependencies]
