[package]
name = "game_engine"
version = "0.1.0-alpha.2"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
cocoa = "0.26.0"
core-graphics = "0.23.2"
core-graphics-types = "0.1.3"
env_logger = "0.11.5"
glam = "0.28.0"
log = "0.4.22"
metal = "0.29.0"
num-traits = "0.2.19"
objc = "0.2.7"
raw-window-handle = "0.6.2"
winit = "0.29.15"

[build-dependencies]

[features]
skip_metal_tests = []
